# project-agent

./: .gcloudignore  .gitignore  ANSWER_TO_GOOGLE_SHEETS_QUESTION.md  DELETE_ALL_DOCUMENTS.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_STATUS.md  DOCUMENT_INDEX_TEMPLATE.md  GET_SERVICE_ACCOUNT_EMAIL.md  GOOGLE_DRIVE_SETUP.md  GOOGLE_SHEETS_ACCESS_IMPROVEMENTS.md  GOOGLE_SHEETS_SETUP_GUIDE.md  GOOGLE_SHEETS_TEMPLATE_GUIDE.md  HEADER_FIX_SUMMARY.md  IAM_ARCHITECTURE_FINAL.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPROVEMENTS_VISUAL_SUMMARY.md  MARKETPLACE_IAM_DESIGN.md  Makefile  OAUTH_HYBRID_IMPLEMENTATION.md  PARENT_CHILD_IAM_DESIGN.md  POC_DEPLOYMENT_SUCCESS.md  POC_PRODUCTION_QA_GUIDE.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_UAT_GUIDE.md  QA_TEST_PLAN.md  QUICK_START_DELETE_AND_IMPORT.md  QUICK_START_SHARE_GOOGLE_SHEETS.md  RBAC_IMPLEMENTATION_PLAN.md  RBAC_JOURNEY_SUMMARY.md  RBAC_PHASE1_COMPLETE.md  RBAC_PHASE3_COMPLETE.md  RBAC_PHASE4_COMPLETE.md  RBAC_PHASE5_PLAN.md  README.md  SECURITY_RBAC_DEFENSE_IN_DEPTH.md  SECURITY_UX_RECOMMENDATION.md  SERVICE_ACCOUNT_SETUP.md  check_document.md  (+13 more)
services/: create_documentai_processor.py  env.example  migrate_documents_to_rbac.py  process_local_documents.py  pyproject.toml  setup_default_tenant.py  setup_phase5_test_data.py  setup_tenant_data.json  test_agent_integration.py  test_api_simple.py  test_chat_api.py  test_document_indexing.py  test_full_stack.py  test_gcs_simple.py  test_phase5_functional.py  test_phase5_security.py  test_simple.py  test_upload.py  (+3 more)
(+64 files in other folders)
