[project]
name = "project-agent-services"
version = "0.1.0"
description = "Project Agent backend services"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-documentai>=2.20.0",
    "google-cloud-vision>=3.4.0",
    "google-cloud-dlp>=3.13.0",
    "google-cloud-pubsub>=2.18.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.108.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pillow>=10.1.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "pyjwt>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "workers", "packages"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
